--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1532,7 +1532,10 @@ html[dark] .icon.fork::before {
     display: inline-block;
   }
 }
-html.lightHeaderBar:not([scroll]) .header .mode::before {
+html.lightHeaderBar:not([scroll])[dark] .header .mode::before {
+  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 24 24' fill='none' stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Ccircle cx='12' cy='12' r='5'/%3E%3Cpath d='M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42'/%3E%3C/svg%3E") 0 0/100% no-repeat;
+}
+html.lightHeaderBar:not([scroll])[light] .header .mode::before {
   background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 24 24' fill='none' stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z'/%3E%3C/svg%3E") 0 0/100% no-repeat;
 }
 html.lightHeaderBar:not([scroll]) .header .title, html.lightHeaderBar:not([scroll]) .header .archive, html.lightHeaderBar:not([scroll]) .header .about {
